@@ -75,6 +75,7 @@ Additions:
    * Add magnifier to entry.
    * Add "focused" and "unfocused" smart callback for panel, video, web, web2, genlist, hover, index, list, map, photocam, progressbar, radio, scroller, slider, slideshow, spinner, toolbar, win, calendar, check, clock, colorselector, datetime, diskselector, flipselector, gengrid, ctxpopup, fileselector_button, naviframe, player, popup, bubble, button.
    * Add elm_web_url_set(), elm_web_url_get() and "url,changed" signal for web, web2.
+   * Add elm_fileselector_mime_type_filter_append and elm_fileselector_filters_clear to support mime type filter.
 
 Improvements:
 
